# onerevise

./: .gitignore  Procfile  README.md  package.json  pyproject.toml  requirements.txt
backend/: local_settings.py  settings.py  urls.py  views.py  wsgi.py
public/: index.html
src/: index.js  routes.js
src/components/: FormStatePicker.js  LoginSignupForm.js  index.js
src/pages/: Admin.css  Admin.js  Browse.js  Dashboard.js  Home.js  index.js
src/reducers/: AdminFormReducer.js  index.js
src/reducers/actions/: index.js  types.js
src/reducers/types/: index.js
