[tool.poetry]
name = "onerevise"
version = "0.1.0"
description = ""
authors = ["Samuel Boateng <kaybeta500@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.10"
whitenoise = "^4.1"
gunicorn = "^19.9"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
